--- a/FF.css
+++ b/FF.css
@@ -1,14 +1,14 @@
 body{
-    background-color: black;
-    color: white;
-    font-family: GeneralSans-Regular;
-    margin: 0%;
     padding: 0%;
+    margin: 0%;
+    font-family: GeneralSans-Regular;
+    color: white;
 }
 
-@font-face{
-    font-family: Pilowlava-Regular;
-    src: url(Pilowlava-Regular.otf);
+html, body {
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 @font-face{
@@ -16,48 +16,47 @@ body{
     src: url(GeneralSans_Complete/Fonts/OTF/GeneralSans-Regular.otf);
 }
 
-.navbar{
+@font-face{
+    font-family: Pilowfont;
+    src: url(Pilowlava-Regular.otf);
+}
+
+
+.container {
+    display: grid;
+    grid-template-rows: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px  20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px ;
+    grid-template-columns:20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px ;
+  }
+
+  .navbar{
+    grid-row-start: 1;
+    grid-row-end: 5;
+    grid-column-start: 4;
+    grid-column-end: 74;
+    background-color: black;
+    color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 100px;
-    padding-top: 10px;
-    margin-right: 10px;
-    border-bottom: 3px solid white;
-}
+    
+  }
 
-.logo{
-    font-size: 30px;
-
-}
-
-li{
+  li{
     list-style: none;
-}
+  }
 
-.pilowtext{
-    font-family: Pilowlava-Regular;
-    font-size: 20px;
-}
+  .logo{
+    font-size: 35px;
+    padding-left: 50px;
+  }
 
-.pilowtext1{
-    font-family: Pilowlava-Regular;
-    font-size: 25px;
-
-}
-
-.pilowtext2{
-    font-family: Pilowlava-Regular;
-    font-size: 16px;
-}
-
-.buttonSUP{
-    height: 32px;
-    width: 105px;
-    background-color: black;
-    color: white;
-    border: none;
-    border: 2px solid white;
-    border-radius: 17px;
-    font-size: 15px;
+.Supbut{
+  margin-right: 30px;
+  height: 33px;
+  width: 100px;
+  background-color: black;
+  border: 2px solid white;
+  color: white;
+  border-radius: 17px;
+  font-size: 15px;
 }
