--- a/FF.css
+++ b/FF.css
@@ -67,11 +67,45 @@ html, body {
   font-size: 15px;
 }
 
+.container3{
+  grid-row-start: 6;  
+  grid-row-end: 21;   
+  grid-column-start: 4;
+  grid-column-end: 74;
+  border: 2px solid white;  
+  color: white;
+  border-top: none;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-left: 2px;
+}
+
 .hero{
-    grid-row-start: 6;
-    grid-row-end: 10;
-    grid-column-start: 4;
-    grid-column-end: 74  ;
-    border: 2px solid white;  
-    color: white;
+  font-size: 50px;
+  word-wrap: break-word;
+  width: 1300px;
+  font-family: GeneralSans-Regular;
+  letter-spacing: 9px;
+}
+
+.container4{
+  grid-row-start: 21;  
+  grid-row-end: 28;   
+  grid-column-start: 4;
+  grid-column-end: 37;
+  border: 2px solid white;  
+  color: white;
+  border-top: none;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-left: 5px;
+}
+
+.heroP{
+  font-size: 21px;
+  text-align: left;
+  word-wrap: break-word;
+  width: 450px;
 }
