--- a/FF.css
+++ b/FF.css
@@ -16,6 +16,26 @@ html, body {
     padding: 0;
 }
 
+.pilow{
+    font-family: Pilowfont;
+    font-size: 30px;
+}
+
+.pilow1{
+    font-family: Pilowfont;
+    font-size: 24px;
+}
+
+.pilow2{
+    font-family: Pilowfont;
+    font-size: 25px;
+}
+
+.pilow3{
+    font-family: Pilowfont;
+    font-size: 35px;
+}
+
 @font-face{
     font-family: GeneralSans-Regular;
     src: url(GeneralSans_Complete/Fonts/OTF/GeneralSans-Regular.otf);
@@ -101,6 +121,7 @@ html, body {
   align-items: center;
   justify-content: start;
   padding-left: 5px;
+  border-right: 1px solid white;
 }
 
 .heroP{
@@ -108,5 +129,22 @@ html, body {
   text-align: left;
   word-wrap: break-word;
   width: 450px;
+}
+
+.container5{
+  grid-row-start: 21;  
+  grid-row-end: 28;   
+  grid-column-start: 37;
+  grid-column-end: 74;
+  border: 2px solid white; 
+  border-left: none;
+  border-top: none;
+}
+
+
+.scrolltext{
+  text-align: center;
+  font-size: 50px;
+  margin-right: 30%;
 }
 
